[package]
name = "scviz"
version = "0.1.0"
authors = ["Ben Postlethwaite <post.ben.here@gmail.com>"]
edition = "2021"
rust-version = "1.67.1"

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
rosc = "0.9.1"
crossbeam-channel = "0.5.6"
realfft = "3.2.0"
ringbuf = "0.3.2"
jack = "0.11.4"
anyhow = "1.0.69"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
